--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h2>Where Your Wildest Dreams Come True</h2>
 		<label for="giftName">Enter your first name only:<br /><br /></label>
 		<input type="text" id="giftName" name="giftName" />
-		<br /><br /><input type="submit" value="Open Your Present"
+		<br /><br /><input type="submit" value="Open Your Present" />
+		<script src="./index.js"></script>
 	</body>
 </html>
-asdfasdf
