--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Dyls Christman Emporium</title>
+		<title>Dyls Christmas Emporium</title>
 		<link href="style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<h1>Welcome To Dyl's Christmas Emporium</h1>
 		<h2>Where Your Wildest Dreams Come True</h2>
-		<label for="giftName">Enter your first name only:<br /><br /></label>
-		<input type="text" id="giftName" name="giftName" />
-		<br /><br /><input type="submit" value="Open Your Present" />
+		<form id="recipient">
+			<label for="giftName">Enter your first name only:<br /><br /></label>
+			<input type="text" id="giftName" name="giftName" />
+			<br /><br /><input type="submit" value="Open Your Present" />
+		</form>
 		<script src="./index.js"></script>
 	</body>
 </html>
