--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dyls Christmas Emporium</title>
-		<link href="style.css" rel="stylesheet" />
+		<link href="/resources/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<h1>Welcome To Dyl's Christmas Emporium</h1>
