--- a/dadAmy.html
+++ b/dadAmy.html
@@ -1,1 +1,12 @@
-<h1>Merry Christmas Dad and Amy!</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Dad and Amy</title>
+		<link href="././resources/style.css" rel="stylesheet" />
+	</head>
+	<body>
+		<h1>Merry Christmas Dad and Amy!</h1>
+	</body>
+</html>
