finished mom text (unstyled)

--- a/mom.html
+++ b/mom.html
@@ -3,10 +3,31 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>m.o.m.</title>
 		<link href="././resources/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<h1>Merry Christmas Mom!!!</h1>
+		<h2>A Christmas Tale</h2>
+		<p>It was the 23rd of December</p>
+		<p>The weather was oh so frightful</p>
+		<p>And Oh! Dylan realized he definitely hadn't forgotten to order any gifts, and thought...</p>
+		<p>Hey wait a second, I know a little bit about websites</p>
+		<p>And thus, this page was born.</p>
+		<h2>YOUR GIFT</h2>
+		<p>
+			This page entitles the recipient to 1 (one) visit from their wonderful son to the moss covered land of
+			Savannah, Georgia. Drinks and dinner will be complements of said son, for any restaurant not exceeding 2
+			(two) michelin stars. (he's still pretty broke).
+		</p>
+		<p>
+			Love you mom, I'm lucky to have you in my life even as I age into obscurity and grow nearer and nearer to
+			getting the AARP discounts alongside you. Can't wait to see you again.
+		</p>
+
+		<h3>
+			With love, <br />
+			Your son Dylan
+		</h3>
 	</body>
 </html>
