added austin text (no styling)

--- a/alex.html
+++ b/alex.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Alex</title>
 		<link href="././resources/style.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Merry Christmas Austin and Alex!</h1>
+		<h1>Merry Christmas Alex!!! <br />(the most levelheaded Kriz that has ever lived)</h1>
 	</body>
 </html>
