small formatting changes

--- a/austin.html
+++ b/austin.html
@@ -14,9 +14,9 @@
 		<p>He then thought, hey, what if I actually put effort into something?</p>
 		<p>It was the first time such an idea had even crossed his mind,</p>
 		<p>
-			but something inside him said yes! <br />this was a chance to go against his base nature, <br />a chance to
-			apply himself! <br />to find the reward that only comes from the steady application of effort! <br />(And
-			also maybe add it to his portfolio one day.)
+			but something inside him said yes!<br />this was a chance to go against his base nature!<br />a chance to
+			apply himself!<br />to find the reward that only comes from the steady application of effort!<br />(And also
+			maybe add it to his portfolio one day.)
 		</p>
 		<p>Ergo, what you are reading at this very moment.</p>
 		<h4>
@@ -28,7 +28,7 @@
 		<h2>YOUR GIFT</h2>
 		<p>
 			Dyl's pharmacy is always open to you, no questions asked, no recompense expected, no product limits. Party
-			on Wayne
+			on Wayne.
 		</p>
 	</body>
 </html>
