included text and styling for all pages

--- a/alex.html
+++ b/alex.html
@@ -5,8 +5,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Alex</title>
 		<link href="././resources/style.css" rel="stylesheet" />
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
+		</style>
 	</head>
 	<body>
-		<h1>Merry Christmas Alex!!! <br />(the most levelheaded Kriz that has ever lived)</h1>
+		<h1>Merry Christmas Alex<br />(the only levelheaded Kriz that has ever lived)</h1>
+		<h2>A story..</h2>
+		<p>
+			I cannot believe how fortunate Austin and the kids are to have you a part of their lives<br />Let alone
+			me<br />
+			If it weren't for your kindness I never would have even made it to Atlanta, and everything good in my life
+			that has come of that move is a direct result of said kindness. There aren't enough words for me to fully
+			convey the amount of respect and love I have for you. To see someone in your position not only keep her
+			cool, but radiate calm to those around her? At times it's hard for my broken brain to understand, but I know
+			that we are all better off having you in this world. I love you, I love your sense of style, and I love the
+			love and kindness you show to those around you.<br />Merry Christmas Alex, here's to a hundred more.
+		</p>
+		<h3>Your gift:</h3>
+		<p>
+			Any two (2) candles, from anywhere in the world. If there's one thing I've learned, it's that you know best
+			what it is you want so you'll have to send me the links. Cheers!
+		</p>
 	</body>
 </html>
