--- a/austin.html
+++ b/austin.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Austin</title>
 		<link href="././resources/style.css" rel="stylesheet" />
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
+		</style>
 	</head>
 	<body>
 		<h1>Merry Christmas Brother Austin <br />(may he reign 1000 years)</h1>
