--- a/dadAmy.html
+++ b/dadAmy.html
@@ -5,8 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dad and Amy</title>
 		<link href="././resources/style.css" rel="stylesheet" />
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
+		</style>
 	</head>
 	<body>
 		<h1>Merry Christmas Dad and Amy!</h1>
+		<h2>A story for a wintry night..</h2>
+        <p>It was a few nights before Christmas,<br>and all through the house,<br>not a neuron was firing,<br>until!<br>
+        The son realized he hadn't ordered gifts off the internet!<br>
+    rather than frantically one day shipping,<br>
+he decided to try out something new.<br><br>Thus, this webpage was born, a monument to his (lack of) time management skills.</br>
+I love you both, and I'm fortunate to have you in my life.  I hope your Christmas is wonderful,<br>and Santa brings you everything you could ever want.</p>
+<h2>Your gift:</h2>
+<p>One (1) dinner or lunch of your choice, compliments of aforementioned son.</p>
+<h3>Love,<br>Dylan</h3>
 	</body>
 </html>
