--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dyls Christmas Emporium</title>
 		<link href="././resources/style.css" rel="stylesheet" />
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
+		</style>
 	</head>
 	<body>
 		<h1>Welcome To Dyl's Christmas Emporium</h1>
