--- a/mom.html
+++ b/mom.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>m.o.m.</title>
 		<link href="././resources/style.css" rel="stylesheet" />
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
+		</style>
 	</head>
 	<body>
 		<h1>Merry Christmas Mom!!!</h1>
@@ -21,7 +24,7 @@
 			(two) michelin stars. (he's still pretty broke).
 		</p>
 		<p>
-			Love you mom, I'm lucky to have you in my life even as I age into obscurity and grow nearer and nearer to
+			I love you mom, I'm lucky to have you in my life even as I age into obscurity and grow nearer and nearer to
 			getting the AARP discounts alongside you. Can't wait to see you again.
 		</p>
 
