--- a/bobby.html
+++ b/bobby.html
@@ -1,1 +1,13 @@
-<img src="./resources/images/bobby2.jpg" alt="bobby" />
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="././resources/style.css" rel="stylesheet" />
+
+		<title>bobby</title>
+	</head>
+	<body>
+		<img src="./resources/images/bobby2.jpg" alt="bobby" />
+	</body>
+</html>
