added grandma and adjusted style

--- a/bobby.html
+++ b/bobby.html
@@ -9,5 +9,9 @@
 	</head>
 	<body>
 		<img src="./resources/images/bobby2.jpg" alt="bobby" />
+		<h3>
+			Sorry Partner, but I ain't got nothing for ya.<br /><br />You might can try the general store just down the
+			way now, but you'll have to get on out of here.
+		</h3>
 	</body>
 </html>
