--- a/mom.html
+++ b/mom.html
@@ -25,7 +25,8 @@
 		</p>
 		<p>
 			I love you mom, I'm lucky to have you in my life even as I age into obscurity and grow nearer and nearer to
-			getting the AARP discounts alongside you. Can't wait to see you again.
+			getting the AARP discounts alongside you. I can't wait until we're walking along the riverfront in Savannah
+			again soon.
 		</p>
 
 		<h3>
