--- a/mom.html
+++ b/mom.html
@@ -14,9 +14,13 @@
 		<h2>A Christmas Tale</h2>
 		<p>It was the 23rd of December</p>
 		<p>The weather was oh so frightful</p>
-		<p>And Oh! Dylan realized he definitely hadn't forgotten to order any gifts, and thought...</p>
+		<p>
+			And Oh!<br />
+			<br />Dylan definitely hadn't forgotten to order any gifts, and thought...
+		</p>
 		<p>Hey wait a second, I know a little bit about websites</p>
 		<p>And thus, this page was born.</p>
+
 		<h2>YOUR GIFT</h2>
 		<p>
 			This page entitles the recipient to 1 (one) visit from their wonderful son to the moss covered land of
