--- a/joe.html
+++ b/joe.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>grandma (the coolest)</title>
+		<title>da goated mentor</title>
 		<link href="././resources/style.css" rel="stylesheet" />
 		<style>
 			@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap");
